STAC-19781: Revert classic Stackstate helm chart to 5.1.4